// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled-components sawmill should generate dark theme based on custom colors 1`] = `
{
  "breakpoints": {
    "max": {
      "lg": "1183px",
      "md": "1023px",
      "sm": "767px",
      "xl": "1439px",
      "xs": "479px",
    },
    "min": {
      "lg": "1184px",
      "md": "1024px",
      "sm": "768px",
      "xl": "1440px",
      "xs": "480px",
    },
    "px": {
      "max": {
        "lg": 1183,
        "md": 1023,
        "sm": 767,
        "xl": 1439,
        "xs": 479,
      },
      "min": {
        "lg": 1184,
        "md": 1024,
        "sm": 768,
        "xl": 1440,
        "xs": 480,
      },
    },
  },
  "colors": {
    "alerts": {
      "danger": {
        "background": "rgba(255,99,99,0.15)",
        "border": "#800000",
      },
      "default": {
        "background": "rgba(154,154,154,0.15)",
        "border": "#404040",
      },
      "gray": {
        "background": "rgba(111,118,143,0.15)",
        "border": "#12182B",
      },
      "info": {
        "background": "rgba(99,99,255,0.15)",
        "border": "#000080",
      },
      "primary": {
        "background": "rgba(154,99,154,0.15)",
        "border": "#400040",
      },
      "success": {
        "background": "rgba(99,154,99,0.15)",
        "border": "#004000",
      },
      "warning": {
        "background": "rgba(255,255,99,0.15)",
        "border": "#808000",
      },
    },
    "background": {
      "body": "#12182B",
      "content": "#232B43",
      "secondaryNav": "#1C2235",
    },
    "badges": {
      "blue": {
        "dot": {
          "color": "rgba(128,0,128,0.2)",
        },
        "filled": {
          "background": "#800080",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "#800080",
          "text": "#800080",
        },
      },
      "dotBorder": "#6F768F",
      "gray": {
        "dot": {
          "color": "#C1C7DC",
        },
        "filled": {
          "background": "#FFFFFF",
          "text": "#6F768F",
        },
        "light": {
          "background": "rgba(111,118,143,0.2)",
          "text": "#E1E4ED",
        },
      },
      "green": {
        "dot": {
          "color": "#007600",
        },
        "filled": {
          "background": "#007600",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(0,118,0,0.1)",
          "text": "#007600",
        },
      },
      "red": {
        "dot": {
          "color": "#FF0000",
        },
        "filled": {
          "background": "#FF0000",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(255,0,0,0.2)",
          "text": "#FF0000",
        },
      },
      "yellow": {
        "dot": {
          "color": "#ebeb00",
        },
        "filled": {
          "background": "#ebeb00",
          "text": "#393900",
        },
        "light": {
          "background": "rgba(235,235,0,0.1)",
          "text": "#ebeb00",
        },
      },
    },
    "brand": {
      "concrete": "#93a5c0",
      "logo": "#8e99ab",
      "primary": "#ff1e1b",
      "secondary": "#ffebeb",
      "tertiary": "#5c6370",
    },
    "button": {
      "danger": {
        "background": "#eb0000",
        "color": "rgb(254,249,249)",
      },
      "default": {
        "background": "#767676",
        "color": "rgb(250,250,250)",
      },
      "gray": {
        "background": "#6F768F",
        "color": "rgb(250,250,251)",
      },
      "info": {
        "background": "#0000eb",
        "color": "rgb(221,221,250)",
      },
      "primary": {
        "background": "#760076",
        "color": "rgb(223,213,223)",
      },
      "success": {
        "background": "#007600",
        "color": "rgb(249,250,249)",
      },
      "warning": {
        "background": "#ebeb00",
        "color": "rgb(74,74,0)",
      },
    },
    "buttons": {
      "blue": {
        "filled": {
          "background": "#800080",
          "backgroundHover": "rgba(128,0,128,0.7)",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(128,0,128,0.2)",
          "backgroundHover": "rgba(128,0,128,0.1)",
          "text": "#800080",
        },
        "outlined": {
          "backgroundHover": "rgba(128,0,128,0.1)",
          "border": "rgba(128,0,128,0.5)",
          "text": "#800080",
        },
        "subtle": {
          "backgroundHover": "rgba(128,0,128,0.2)",
          "text": "#800080",
        },
      },
      "disabledBackground": "rgba(246,247,252,0.1)",
      "gray": {
        "filled": {
          "background": "#6F768F",
          "backgroundHover": "#394261",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(111,118,143,0.2)",
          "backgroundHover": "rgba(111,118,143,0.1)",
          "text": "#F6F7FC",
        },
        "outlined": {
          "backgroundHover": "rgba(111,118,143,0.1)",
          "border": "rgba(111,118,143,0.6)",
          "text": "#F6F7FC",
        },
        "subtle": {
          "backgroundHover": "rgba(111,118,143,0.3)",
          "text": "#F6F7FC",
        },
      },
      "red": {
        "filled": {
          "background": "#FF0000",
          "backgroundHover": "rgba(255,0,0,0.7)",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(255,0,0,0.2)",
          "backgroundHover": "rgba(255,0,0,0.1)",
          "text": "#FF0000",
        },
        "outlined": {
          "backgroundHover": "rgba(255,0,0,0.1)",
          "border": "rgba(255,151,151,0.4)",
          "text": "#FF0000",
        },
        "subtle": {
          "backgroundHover": "rgba(255,0,0,0.2)",
          "text": "#FF0000",
        },
      },
    },
    "cards": {
      "background": "#394261",
      "border": "#1C2235",
    },
    "charts": {
      "containerBackground": "#F6F7FC",
      "containerBorder": "#E1E4ED",
      "cyan": {
        "fill": "rgba(0,0,235,0.2)",
        "markerColor": "#0000eb",
        "textColor": "#FFFFFF",
      },
      "highlight": "#0000eb",
      "lines": "#394261",
    },
    "contrast": {
      "danger": "rgb(254,249,249)",
      "default": "rgb(250,250,250)",
      "gray": "rgb(191,192,195)",
      "info": "rgb(221,221,250)",
      "primary": "rgb(223,213,223)",
      "success": "rgb(249,250,249)",
      "warning": "rgb(74,74,0)",
    },
    "disabled": {
      "danger": {
        "background": "#ef6969",
        "color": "rgb(254,250,250)",
      },
      "default": {
        "background": "#9b9595",
        "color": "rgb(251,251,251)",
      },
      "gray": {
        "background": "#77717b",
        "color": "rgb(250,250,250)",
      },
      "info": {
        "background": "#7269eb",
        "color": "rgb(250,250,254)",
      },
      "primary": {
        "background": "#9b6995",
        "color": "rgb(251,250,251)",
      },
      "success": {
        "background": "#729569",
        "color": "rgb(250,251,250)",
      },
      "warning": {
        "background": "#d6d732",
        "color": "rgb(83,83,19)",
      },
    },
    "global": {
      "background": "#89a4ff",
      "contentBackground": "#0b42ff",
      "link": "#8cb5ea",
      "linkHover": "#bfe7ff",
      "navigationBackground": "#0b42ff",
      "navigationBoxShadow": "rgba(20,20,20,0.5)",
      "textAlt": "#ffebeb",
    },
    "gray": {
      "10": "#ffffff",
      "100": "#888888",
      "20": "#f2f2f2",
      "30": "#e5e5e5",
      "40": "#d7d7d7",
      "50": "#cacaca",
      "60": "#bdbdbd",
      "70": "#b0b0b0",
      "80": "#a2a2a2",
      "90": "#959595",
    },
    "icons": {
      "active": "rgba(246,247,252,0.7)",
      "disabled": "rgba(246,247,252,0.5)",
      "icon": "#E1E4ED",
    },
    "input": {
      "background": "#1C2235",
      "backgroundDisabled": "#181d2e",
      "border": "rgba(154,154,154,0.74)",
      "borderFocus": "#0000ce",
      "boxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0,0,206,0.4)",
      "color": "#5c6370",
      "colorDisabled": "#bdbdbd",
      "placeholder": "#bdbdbd",
    },
    "link": {
      "default": "#800080",
      "disabled": "rgba(230,221,230,0.5)",
      "hover": "#9a639a",
    },
    "menu": {
      "default": {
        "activeBackground": "rgba(128,0,128,0.2)",
        "activeColor": "#800080",
        "color": "#F6F7FC",
        "hover": "rgba(57,66,97,0.2)",
      },
      "red": {
        "color": {
          "active": "rgba(255,0,0,0.2)",
          "color": "#FF0000",
        },
      },
    },
    "misc": {
      "divider": "#060C1F",
      "logoColor": "#F6F7FC",
      "stripedBackground": "rgba(57,66,97,0.35)",
    },
    "newsCards": {
      "background": "#252D47",
    },
    "notification": {
      "background": "#394261",
      "blue": "#800080",
      "border": "#394261",
      "green": "#008000",
      "progressBackground": "#252D47",
      "red": "#FF0000",
    },
    "pagination": {
      "active": {
        "background": "#0000eb",
        "border": "#0000eb",
        "color": "#FFFFFF",
      },
    },
    "section": {
      "filled": {
        "background": "#1C2235",
        "border": "#060C1F",
      },
    },
    "severity": {
      "high": "rgba(235,0,0,0.75)",
      "low": "rgba(111,118,143,0.75)",
      "medium": "rgba(37,45,71,0.75)",
      "success": "rgba(35,43,67,0.75)",
    },
    "table": {
      "head": {
        "background": "transparent",
      },
      "highlightBackground": "#0000eb",
      "highlightBorder": "#6363ff",
      "highlightText": "#F6F7FC",
      "row": {
        "background": "transparent",
        "backgroundExpanded": "#252D47",
        "backgroundHover": "#394261",
        "backgroundStriped": "rgba(6,12,31,0.2)",
        "divider": "#060C1F",
      },
      "variant": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#ce0000",
        "info": "#0000ce",
        "primary": "#670067",
        "success": "#006700",
        "warning": "#cece00",
      },
      "variantHover": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#800000",
        "info": "#000080",
        "primary": "#400040",
        "success": "#004000",
        "warning": "#808000",
      },
    },
    "tabs": {
      "active": "#800080",
      "hover": "#6F768F",
    },
    "text": {
      "disabled": "rgba(92,99,112,0.5)",
      "primary": "#5c6370",
      "secondary": "rgba(92,99,112,0.6)",
      "severity": {
        "danger": "#008000",
        "success": "#007600",
      },
    },
    "variant": {
      "danger": "#eb0000",
      "dark": {
        "danger": "#FF0000",
        "default": "#808080",
        "gray": "#394261",
        "info": "#0000FF",
        "primary": "#800080",
        "success": "#008000",
        "warning": "#FFFF00",
      },
      "darker": {
        "danger": "#ff9797",
        "default": "#b7b7b7",
        "gray": "#C1C7DC",
        "info": "#9797ff",
        "primary": "#b797b7",
        "success": "#97b797",
        "warning": "#ffff97",
      },
      "darkest": {
        "danger": "#ffdddd",
        "default": "#e6e6e6",
        "gray": "#F6F7FC",
        "info": "#ddddff",
        "primary": "#e6dde6",
        "success": "#dde6dd",
        "warning": "#ffffdd",
      },
      "default": "#767676",
      "gray": "#252D47",
      "info": "#0000eb",
      "light": {
        "danger": "#ce0000",
        "default": "#676767",
        "gray": "#232B43",
        "info": "#0000ce",
        "primary": "#670067",
        "success": "#006700",
        "warning": "#cece00",
      },
      "lighter": {
        "danger": "#800000",
        "default": "#404040",
        "gray": "#12182B",
        "info": "#000080",
        "primary": "#400040",
        "success": "#004000",
        "warning": "#808000",
      },
      "lightest": {
        "danger": "#390000",
        "default": "#1d1d1d",
        "gray": "#060C1F",
        "info": "#000039",
        "primary": "#1d001d",
        "success": "#001d00",
        "warning": "#393900",
      },
      "primary": "#760076",
      "success": "#007600",
      "warning": "#ebeb00",
    },
  },
  "components": {
    "aceEditor": "
 .ace_editor {
    border: 1px solid rgba(154,154,154,0.74) !important;
    border-radius: 0;
  }

  .ace-graylog {
    background-color: #0b42ff;
    color: #e6e6e6;

    &.ace_multiselect .ace_selection.ace_start {
      box-shadow: 0 0 3px 0 #0b42ff;
    }

    .ace_gutter {
      background: #404040;
      color: #e6e6e6;
    }

    .ace_print-margin {
      width: 1px;
      background: #1d1d1d;
    }

    .ace_cursor {
      border-color: #5c6370;
    }

    .ace_marker-layer {
      .ace_selection {
        background: Highlight;
      }

      .ace_step {
        background: rgb(255 255 0);
      }

      .ace_bracket {
        margin: -1px 0 0 -1px;
        border: 1px solid #b0b0b0;
      }

      .ace_selected-word {
        border: 1px solid #bdbdbd;
        background: transparent;
      }

      .ace_active-line {
        background: #1d1d1d;
      }
    }

    .ace_gutter-active-line {
      background-color: #1d1d1d;
    }

    .ace_invisible {
      color: #b0b0b0;
    }

    .ace_keyword,
    .ace_meta,
    .ace_storage,
    .ace_storage.ace_type,
    .ace_support.ace_type {
      color: #8cb5ea;
    }

    .ace_keyword.ace_operator {
      color: #9797ff;
    }

    .ace_constant.ace_character,
    .ace_constant.ace_language,
    .ace_constant.ace_numeric,
    .ace_keyword.ace_other.ace_unit,
    .ace_support.ace_constant,
    .ace_variable.ace_parameter {
      color: #b797b7;
    }

    .ace_constant.ace_other {
      color: #b7b7b7;
    }

    .ace_invalid {
      color: #ffebeb;
      background-color: #ce0000;
    }

    .ace_invalid.ace_deprecated {
      color: #ffebeb;
      background-color: #760076;
    }

    .ace_fold {
      background-color: #0000eb;
      border-color: #e6e6e6;
    }

    .ace_entity.ace_name.ace_function,
    .ace_support.ace_function,
    .ace_variable {
      color: #0000eb;
    }

    .ace_support.ace_class,
    .ace_support.ace_type {
      color: #ffff97;
    }

    .ace_heading,
    .ace_markup.ace_heading,
    .ace_string {
      color: #97b797;
    }

    .ace_entity.ace_name.ace_tag,
    .ace_entity.ace_other.ace_attribute-name,
    .ace_meta.ace_tag,
    .ace_string.ace_regexp,
    .ace_variable {
      color: #ce0000;
    }

    .ace_comment {
      color: rgba(92,99,112,0.6);
    }

    .ace_tooltip {
      background-color: #89a4ff;
      padding: 4px;
      padding-left: 0;
      line-height: 1.5;
      
      .ace_icon {
        margin-right: 3px;
      }
    }
  }
",
  },
  "fonts": {
    "family": {
      "body": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
      "monospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
      "navigation": ""DM Sans", "Helvetica Neue", Helvetica, Arial, sans-serif",
    },
    "lineHeight": {
      "body": "1.24px",
    },
    "size": {
      "body": "1.000rem",
      "extraLarge": "1.383rem",
      "h1": "1.575rem",
      "h2": "1.296rem",
      "h3": "1.215rem",
      "h4": "1.138rem",
      "h5": "1.067rem",
      "h6": "1.000rem",
      "huge": "2.479rem",
      "large": "1.067rem",
      "navigation": "0.937rem",
      "root": "16px",
      "small": "0.878rem",
      "tiny": "0.823rem",
    },
  },
  "mode": "dark",
  "spacings": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "px": {
      "lg": 27,
      "md": 17,
      "sm": 10,
      "xl": 44,
      "xs": 6,
      "xxl": 70,
      "xxs": 4,
    },
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
  "utils": {
    "colorLevel": [Function],
    "contrastingColor": [Function],
    "opacify": [Function],
    "readableColor": [Function],
  },
}
`;

exports[`styled-components sawmill should generate light theme based on custom colors 1`] = `
{
  "breakpoints": {
    "max": {
      "lg": "1183px",
      "md": "1023px",
      "sm": "767px",
      "xl": "1439px",
      "xs": "479px",
    },
    "min": {
      "lg": "1184px",
      "md": "1024px",
      "sm": "768px",
      "xl": "1440px",
      "xs": "480px",
    },
    "px": {
      "max": {
        "lg": 1183,
        "md": 1023,
        "sm": 767,
        "xl": 1439,
        "xs": 479,
      },
      "min": {
        "lg": 1184,
        "md": 1024,
        "sm": 768,
        "xl": 1440,
        "xs": 480,
      },
    },
  },
  "colors": {
    "alerts": {
      "danger": {
        "background": "rgba(225,0,0,0.1)",
        "border": "#ff9e9e",
      },
      "default": {
        "background": "rgba(113,113,113,0.1)",
        "border": "#bbbbbb",
      },
      "gray": {
        "background": "rgba(37,45,71,0.1)",
        "border": "#C1C7DC",
      },
      "info": {
        "background": "rgba(0,0,225,0.1)",
        "border": "#9e9eff",
      },
      "primary": {
        "background": "rgba(113,0,113,0.1)",
        "border": "#bb9ebb",
      },
      "success": {
        "background": "rgba(0,113,0,0.1)",
        "border": "#9ebb9e",
      },
      "warning": {
        "background": "rgba(225,225,0,0.1)",
        "border": "#ffff9e",
      },
    },
    "background": {
      "body": "#F6F7FC",
      "content": "#FFFFFF",
      "secondaryNav": "#E1E4ED",
    },
    "badges": {
      "blue": {
        "dot": {
          "color": "rgba(113,0,113,0.1)",
        },
        "filled": {
          "background": "#710071",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "#710071",
          "text": "#710071",
        },
      },
      "dotBorder": "#C1C7DC",
      "gray": {
        "dot": {
          "color": "#6F768F",
        },
        "filled": {
          "background": "#FFFFFF",
          "text": "#6F768F",
        },
        "light": {
          "background": "rgba(111,118,143,0.1)",
          "text": "#252D47",
        },
      },
      "green": {
        "dot": {
          "color": "#007100",
        },
        "filled": {
          "background": "#007100",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(0,113,0,0.1)",
          "text": "#005600",
        },
      },
      "red": {
        "dot": {
          "color": "#e10000",
        },
        "filled": {
          "background": "#e10000",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(225,0,0,0.1)",
          "text": "#e10000",
        },
      },
      "yellow": {
        "dot": {
          "color": "#e1e100",
        },
        "filled": {
          "background": "#e1e100",
          "text": "#585800",
        },
        "light": {
          "background": "rgba(225,225,0,0.1)",
          "text": "#abab00",
        },
      },
    },
    "brand": {
      "concrete": "#93a5c0",
      "logo": "#8e99ab",
      "primary": "#ff1e1b",
      "secondary": "#ffebeb",
      "tertiary": "#5c6370",
    },
    "button": {
      "danger": {
        "background": "#e10000",
        "color": "rgb(254,249,249)",
      },
      "default": {
        "background": "#717171",
        "color": "rgb(250,250,250)",
      },
      "gray": {
        "background": "rgba(193,199,220,0.4)",
        "color": "rgba(43,44,49,0.9700000000000002)",
      },
      "info": {
        "background": "#0000e1",
        "color": "rgb(213,213,246)",
      },
      "primary": {
        "background": "#710071",
        "color": "rgb(216,206,216)",
      },
      "success": {
        "background": "#007100",
        "color": "rgb(249,250,249)",
      },
      "warning": {
        "background": "#e1e100",
        "color": "rgb(50,50,0)",
      },
    },
    "buttons": {
      "blue": {
        "filled": {
          "background": "#710071",
          "backgroundHover": "#800080",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(113,0,113,0.1)",
          "backgroundHover": "rgba(113,0,113,0.05)",
          "text": "#710071",
        },
        "outlined": {
          "backgroundHover": "rgba(113,0,113,0.1)",
          "border": "#bb9ebb",
          "text": "#710071",
        },
        "subtle": {
          "backgroundHover": "rgba(113,0,113,0.2)",
          "text": "#710071",
        },
      },
      "disabledBackground": "rgba(37,45,71,0.08)",
      "gray": {
        "filled": {
          "background": "#6F768F",
          "backgroundHover": "#C1C7DC",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(111,118,143,0.1)",
          "backgroundHover": "rgba(111,118,143,0.05)",
          "text": "#252D47",
        },
        "outlined": {
          "backgroundHover": "rgba(111,118,143,0.1)",
          "border": "#C1C7DC",
          "text": "#252D47",
        },
        "subtle": {
          "backgroundHover": "rgba(111,118,143,0.2)",
          "text": "#252D47",
        },
      },
      "red": {
        "filled": {
          "background": "#e10000",
          "backgroundHover": "#FF0000",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(225,0,0,0.1)",
          "backgroundHover": "rgba(225,0,0,0.05)",
          "text": "#e10000",
        },
        "outlined": {
          "backgroundHover": "rgba(225,0,0,0.1)",
          "border": "#ff9e9e",
          "text": "#e10000",
        },
        "subtle": {
          "backgroundHover": "rgba(225,0,0,0.1)",
          "text": "#e10000",
        },
      },
    },
    "cards": {
      "background": "#FFFFFF",
      "border": "#E1E4ED",
    },
    "charts": {
      "containerBackground": "#F6F7FC",
      "containerBorder": "#E1E4ED",
      "cyan": {
        "fill": "rgba(0,0,225,0.2)",
        "markerColor": "#0000e1",
        "textColor": "#FFFFFF",
      },
      "highlight": "#0000e1",
      "lines": "#E1E4ED",
    },
    "contrast": {
      "danger": "rgb(254,249,249)",
      "default": "rgb(250,250,250)",
      "gray": "rgb(191,192,195)",
      "info": "rgb(213,213,246)",
      "primary": "rgb(216,206,216)",
      "success": "rgb(249,250,249)",
      "warning": "rgb(50,50,0)",
    },
    "disabled": {
      "danger": {
        "background": "#e76969",
        "color": "rgb(254,250,250)",
      },
      "default": {
        "background": "#989292",
        "color": "rgb(251,251,251)",
      },
      "gray": {
        "background": "#77717b",
        "color": "rgb(250,250,250)",
      },
      "info": {
        "background": "#7269e3",
        "color": "rgb(250,250,254)",
      },
      "primary": {
        "background": "#986992",
        "color": "rgb(251,250,251)",
      },
      "success": {
        "background": "#729269",
        "color": "rgb(250,251,250)",
      },
      "warning": {
        "background": "#cdce32",
        "color": "rgb(79,80,19)",
      },
    },
    "global": {
      "background": "#89a4ff",
      "contentBackground": "#0b42ff",
      "link": "#8cb5ea",
      "linkHover": "#5b85b8",
      "navigationBackground": "#0b42ff",
      "navigationBoxShadow": "rgba(245,246,248,0.5)",
      "textAlt": "#ffebeb",
    },
    "gray": {
      "10": "#252d47",
      "100": "#ffffff",
      "20": "#3d445b",
      "30": "#555c70",
      "40": "#6e7384",
      "50": "#868a99",
      "60": "#9ea2ad",
      "70": "#b6b9c2",
      "80": "#cfd0d6",
      "90": "#e7e8eb",
    },
    "icons": {
      "active": "rgba(37,45,71,0.7)",
      "disabled": "rgba(37,45,71,0.4)",
      "icon": "#394261",
    },
    "input": {
      "background": "#0b42ff",
      "backgroundDisabled": "#0a39dd",
      "border": "#C1C7DC",
      "borderFocus": "#0000FF",
      "boxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0,0,255,0.4)",
      "color": "#5c6370",
      "colorDisabled": "#9ea2ad",
      "placeholder": "#9ea2ad",
    },
    "link": {
      "default": "#710071",
      "disabled": "rgba(37,45,71,0.4)",
      "hover": "#640064",
    },
    "menu": {
      "default": {
        "activeBackground": "rgba(113,0,113,0.1)",
        "activeColor": "#710071",
        "color": "#252D47",
        "hover": "rgba(111,118,143,0.1)",
      },
      "red": {
        "color": {
          "active": "rgba(225,0,0,0.1)",
          "color": "#e10000",
        },
      },
    },
    "misc": {
      "divider": "#E1E4ED",
      "logoColor": "#252D47",
      "stripedBackground": "#F6F7FC",
    },
    "newsCards": {
      "background": "#E1E4ED",
    },
    "notification": {
      "background": "#FFFFFF",
      "blue": "#d0bdd0",
      "border": "#E1E4ED",
      "green": "#bdd0bd",
      "progressBackground": "#252D47",
      "red": "#ffbdbd",
    },
    "pagination": {
      "active": {
        "background": "#0000e1",
        "border": "#0000e1",
        "color": "#FFFFFF",
      },
    },
    "section": {
      "filled": {
        "background": "#F6F7FC",
        "border": "#E1E4ED",
      },
    },
    "severity": {
      "high": "rgba(225,0,0,0.75)",
      "low": "rgba(111,118,143,0.75)",
      "medium": "rgba(37,45,71,0.75)",
      "success": "rgba(35,43,67,0.75)",
    },
    "table": {
      "head": {
        "background": "transparent",
      },
      "highlightBackground": "#0000e1",
      "highlightBorder": "#7878ff",
      "highlightText": "#F6F7FC",
      "row": {
        "background": "transparent",
        "backgroundExpanded": "#FFFFFF",
        "backgroundHover": "#E1E4ED",
        "backgroundStriped": "rgba(193,199,220,0.1)",
        "divider": "#E1E4ED",
      },
      "variant": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#FF0000",
        "info": "#0000FF",
        "primary": "#800080",
        "success": "#008000",
        "warning": "#FFFF00",
      },
      "variantHover": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#ff9e9e",
        "info": "#9e9eff",
        "primary": "#bb9ebb",
        "success": "#9ebb9e",
        "warning": "#ffff9e",
      },
    },
    "tabs": {
      "active": "#710071",
      "hover": "#C1C7DC",
    },
    "text": {
      "disabled": "rgba(92,99,112,0.4)",
      "primary": "#5c6370",
      "secondary": "rgba(92,99,112,0.6)",
      "severity": {
        "danger": "#007100",
        "success": "#006400",
      },
    },
    "variant": {
      "danger": "#e10000",
      "dark": {
        "danger": "#c80000",
        "default": "#646464",
        "gray": "#232B43",
        "info": "#0000c8",
        "primary": "#640064",
        "success": "#006400",
        "warning": "#c8c800",
      },
      "darker": {
        "danger": "#880000",
        "default": "#444444",
        "gray": "#12182B",
        "info": "#000088",
        "primary": "#440044",
        "success": "#004400",
        "warning": "#888800",
      },
      "darkest": {
        "danger": "#580000",
        "default": "#2c2c2c",
        "gray": "#060C1F",
        "info": "#000058",
        "primary": "#2c002c",
        "success": "#002c00",
        "warning": "#585800",
      },
      "default": "#717171",
      "gray": "#252D47",
      "info": "#0000e1",
      "light": {
        "danger": "#FF0000",
        "default": "#808080",
        "gray": "#394261",
        "info": "#0000FF",
        "primary": "#800080",
        "success": "#008000",
        "warning": "#FFFF00",
      },
      "lighter": {
        "danger": "#ff9e9e",
        "default": "#bbbbbb",
        "gray": "#C1C7DC",
        "info": "#9e9eff",
        "primary": "#bb9ebb",
        "success": "#9ebb9e",
        "warning": "#ffff9e",
      },
      "lightest": {
        "danger": "#ffd8d8",
        "default": "#e2e2e2",
        "gray": "#F6F7FC",
        "info": "#d8d8ff",
        "primary": "#e2d8e2",
        "success": "#d8e2d8",
        "warning": "#ffffd8",
      },
      "primary": "#710071",
      "success": "#007100",
      "warning": "#e1e100",
    },
  },
  "components": {
    "aceEditor": "
 .ace_editor {
    border: 1px solid #C1C7DC !important;
    border-radius: 0;
  }

  .ace-graylog {
    background-color: #0b42ff;
    color: #2c2c2c;

    &.ace_multiselect .ace_selection.ace_start {
      box-shadow: 0 0 3px 0 #0b42ff;
    }

    .ace_gutter {
      background: #bbbbbb;
      color: #2c2c2c;
    }

    .ace_print-margin {
      width: 1px;
      background: #e2e2e2;
    }

    .ace_cursor {
      border-color: #5c6370;
    }

    .ace_marker-layer {
      .ace_selection {
        background: Highlight;
      }

      .ace_step {
        background: rgb(255 255 0);
      }

      .ace_bracket {
        margin: -1px 0 0 -1px;
        border: 1px solid #b6b9c2;
      }

      .ace_selected-word {
        border: 1px solid #9ea2ad;
        background: transparent;
      }

      .ace_active-line {
        background: #e2e2e2;
      }
    }

    .ace_gutter-active-line {
      background-color: #e2e2e2;
    }

    .ace_invisible {
      color: #b6b9c2;
    }

    .ace_keyword,
    .ace_meta,
    .ace_storage,
    .ace_storage.ace_type,
    .ace_support.ace_type {
      color: #8cb5ea;
    }

    .ace_keyword.ace_operator {
      color: #000088;
    }

    .ace_constant.ace_character,
    .ace_constant.ace_language,
    .ace_constant.ace_numeric,
    .ace_keyword.ace_other.ace_unit,
    .ace_support.ace_constant,
    .ace_variable.ace_parameter {
      color: #440044;
    }

    .ace_constant.ace_other {
      color: #444444;
    }

    .ace_invalid {
      color: #ffebeb;
      background-color: #FF0000;
    }

    .ace_invalid.ace_deprecated {
      color: #ffebeb;
      background-color: #710071;
    }

    .ace_fold {
      background-color: #0000e1;
      border-color: #2c2c2c;
    }

    .ace_entity.ace_name.ace_function,
    .ace_support.ace_function,
    .ace_variable {
      color: #0000e1;
    }

    .ace_support.ace_class,
    .ace_support.ace_type {
      color: #888800;
    }

    .ace_heading,
    .ace_markup.ace_heading,
    .ace_string {
      color: #004400;
    }

    .ace_entity.ace_name.ace_tag,
    .ace_entity.ace_other.ace_attribute-name,
    .ace_meta.ace_tag,
    .ace_string.ace_regexp,
    .ace_variable {
      color: #FF0000;
    }

    .ace_comment {
      color: rgba(92,99,112,0.6);
    }

    .ace_tooltip {
      background-color: #89a4ff;
      padding: 4px;
      padding-left: 0;
      line-height: 1.5;
      
      .ace_icon {
        margin-right: 3px;
      }
    }
  }
",
  },
  "fonts": {
    "family": {
      "body": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
      "monospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
      "navigation": ""DM Sans", "Helvetica Neue", Helvetica, Arial, sans-serif",
    },
    "lineHeight": {
      "body": "1.24px",
    },
    "size": {
      "body": "1.000rem",
      "extraLarge": "1.383rem",
      "h1": "1.575rem",
      "h2": "1.296rem",
      "h3": "1.215rem",
      "h4": "1.138rem",
      "h5": "1.067rem",
      "h6": "1.000rem",
      "huge": "2.479rem",
      "large": "1.067rem",
      "navigation": "0.937rem",
      "root": "16px",
      "small": "0.878rem",
      "tiny": "0.823rem",
    },
  },
  "mode": "light",
  "spacings": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "px": {
      "lg": 27,
      "md": 17,
      "sm": 10,
      "xl": 44,
      "xs": 6,
      "xxl": 70,
      "xxs": 4,
    },
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
  "utils": {
    "colorLevel": [Function],
    "contrastingColor": [Function],
    "opacify": [Function],
    "readableColor": [Function],
  },
}
`;
